[tool.poetry]
name = "feature-engineering-for-machine-learning"
version = "0.1.0"
description = ""
authors = ["Shan Dou <shandou.seismo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
jupyter-black = "^0.3.4"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
